java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateField2.pass
/*
 * CreateElement1.java
 *
 * Created on March 21, 2005, 10:21 PM
 *
 * To change this template, choose Tools | Options and locate the template under
 * the Source Creation and Management node. Right-click the template and choose
 * Open. You can then make changes to the template in the Source Editor.
 */

package org.netbeans.test.java.hints;

/**
 *
 */
public class CreateField2 {
    private static String test;
    
    /** Creates a new instance of CreateElement1 */
    public CreateField2() {
    }
    
    public static final void main(String[] args) {
        test = "test";
    }

}
